replaced slacgismo links with hipas references for github and docker (#2)
* replaced slacgismo links with hipas references for github and docker
* renamed RBSA link back to slacgismo
* typo
* reverse citation reference - still should reference slacgismo, need to change citation
for hipas

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,8 +1,8 @@
-FROM slacgismo/gridlabd_dockerhub_base:210211
+FROM hipas/gridlabd_dockerhub_base:210211
 
 
 ENV container docker
-ENV REPO=https://github.com/slacgismo/gridlabd
+ENV REPO=https://github.com/hipas/gridlabd
 ARG BRANCH
 RUN echo "Building $BRANCH"
 ENV ENABLE=gismo
